--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -174,12 +174,12 @@
     </header>
     <!--Main Navigation-->
     <!--Main layout-->
-    <main class="" >
+    <main class="mx-3" >
         
-        <div class="container">
-            <div class="row">
+        <div class="container-fluid">
+            <div class="row ">
                 
-                <div class="col-md-12">
+                <div class="col-md-12 px-0">
                     @RenderBody()
 
                 </div>
