update content of post

--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -72,7 +72,7 @@
                                 <div class="col-lg-5 col-sm-12 col-xs-12 mb-1 pr-1">
                                     <!--Featured image-->
                                     <div class="view overlay hm-white-slight z-depth-1-half">
-                                        <img src="https://mdbootstrap.com/img/Photos/Others/img (38).jpg" class="img-fluid" alt="First sample image">
+                                        <img src="/Images/Postsimages/Posts/Trends_medium.jpg" class="img-fluid" alt="First sample image">
                                         <a href="#">
                                             <div class="mask"></div>
                                         </a>
