--- a/BlogHealth/Views/Admin/AddPost.cshtml
+++ b/BlogHealth/Views/Admin/AddPost.cshtml
@@ -100,7 +100,7 @@
                 $('#collapseOne').removeClass('show');
 
                 $('#collapseTwo').addClass('show');
-                $('#frmContentPost input[name="Content"]').removeAttr('disabled');
+                $('#frmContentPost textarea[name="Content"]').removeAttr('disabled');
                 $('#frmContentPost input[name="ID"]').val("@ViewBag.ID");
             }
             //$("#frmAddPost input[name='files']").kendoUpload({
@@ -158,7 +158,7 @@
             <div class="card" id="Step1">
 
                 <!-- Card header -->
-                <div class="card-header" role="tab" id="headingOne">
+                <div class="card-header grey lighten-3" role="tab" id="headingOne">
                     <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         <h5 class="mb-0"><i class="fa fa-info-circle"></i>
                             Thông tin bài viết <i class="fa fa-angle-down rotate-icon"></i>
@@ -222,10 +222,10 @@
             <!-- Accordion card -->
             <!-- Accordion card -->
             
-            <div class="card disabled" id="Step2">
+            <div class="card " id="Step2">
 
                 <!-- Card header -->
-                <div class="card-header " role="tab" id="headingTwo">
+                <div class="card-header grey lighten-3" role="tab" id="headingTwo">
                     <a class="collapsed" data-toggle="collapse" data-parent="#accordionEx" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         <h5 class="mb-0"><i class="fa fa-pencil-square-o"></i>
                             Nội dung bài viết<i class="fa fa-angle-down rotate-icon"></i>
@@ -242,12 +242,11 @@
                                 <!--First column-->
                                 <div class="col-md-12">
                                     <div class="md-form">
-                                        <textarea type="text" disabled id="Content" class="md-textarea"></textarea>
+                                        <textarea type="text" id="Content" name="Content" class="md-textarea"></textarea>
                                     </div>
-
                                 </div>
-
                             </div>
+                            <button type="submit" class="btn btn-success"><i class="fa fa-check-circle-o"></i> Đăng bài </button>
                         </form>
                     </div>
                 </div>
