add material not done

--- a/BlogHealth/Views/Admin/Categories.cshtml
+++ b/BlogHealth/Views/Admin/Categories.cshtml
@@ -21,7 +21,7 @@
         color: #000000;
     }*/
     .k-grid table tr:hover {
-        background-color: rgba(37,207,207,.8) !important;
+        background-color: #4285f4 !important;
         /*box-shadow: 0 8px 17px 0 rgba(0,0,0,.2), 0 6px 20px 0 rgba(0,0,0,.19);*/
         /*border:#42a5f5 1px solid!important;*/
     }
