--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -18,12 +18,13 @@
     <link href="~/AdminAsset/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/AdminAsset/css/mdb.min.css" rel="stylesheet" />
     <link href="~/Kendo/css/kendo.common.min.css" rel="stylesheet" />
-    <link href="~/Kendo/css/kendo.bootstrap-v4.min.css" rel="stylesheet" />
+    @*<link href="~/Kendo/css/kendo.bootstrap-v4.min.css" rel="stylesheet" />*@
     <link href="~/AdminAsset/css/style.css" rel="stylesheet" />
-
-
+    <link href="~/Kendo/css/kendo.material.min.css" rel="stylesheet" />
+    <link href="~/Kendo/css/kendo.material.mobile.min.css" rel="stylesheet" />
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-    @RenderSection("css", false)
+        @RenderSection("css", false)
+        @*<link href="~/Kendo/css/all.css" rel="stylesheet" />*@
 </head>
 <body class="fixed-sn">
 
