--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -18,10 +18,11 @@
     <link href="~/AdminAsset/css/bootstrap.min.css" rel="stylesheet" />
     <link href="~/AdminAsset/css/mdb.min.css" rel="stylesheet" />
     <link href="~/Kendo/css/kendo.common.min.css" rel="stylesheet" />
-    @*<link href="~/Kendo/css/kendo.bootstrap-v4.min.css" rel="stylesheet" />*@
+    @*<link href="~/Kendo/css/kendo.common.core.min.css" rel="stylesheet" />*@
+    <link href="~/Kendo/css/kendo.bootstrap-v4.min.css" rel="stylesheet" />
     <link href="~/AdminAsset/css/style.css" rel="stylesheet" />
-    <link href="~/Kendo/css/kendo.material.min.css" rel="stylesheet" />
-    <link href="~/Kendo/css/kendo.material.mobile.min.css" rel="stylesheet" />
+    @*<link href="~/Kendo/css/kendo.material.min.css" rel="stylesheet" />*@
+    
     <link href="~/HomeAsset/font/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" />
         @RenderSection("css", false)
         @*<link href="~/Kendo/css/all.css" rel="stylesheet" />*@
@@ -216,8 +217,8 @@
     <script src="~/AdminAsset/js/mdb.min.js"></script>
 
     <script src="~/Kendo/js/kendo.all.min.js"></script>
-    <script src="~/Kendo/js/jszip.min.js"></script>
     <script src="~/Kendo/js/kendo.all.min.js"></script>
+    <script src="~/Kendo/js/jszip.min.js"></script>
     <script src="~/ckfinder/ckfinder.js"></script>
     @*<script src="~/ckfinder/ckfinder_v1.js"></script>*@
     <!-- Initializations -->
