--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -20,8 +20,8 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid p-0" id="header">
-            <nav class="navbar navbar-expand-lg navbar-light scrolling-navbar grey lighten-2 hidden-sm p-0" style="box-shadow: 0 1px 0px 0 rgba(0,0,0,.16)!important;">
+        <div class="container-fluid p-0 grey lighten-4" id="header">
+            <nav class="navbar navbar-expand-lg navbar-light scrolling-navbar grey lighten-5 hidden-sm p-0" style="box-shadow: 0 1px 0px 0 rgba(0,0,0,.16)!important;">
                 <div class="container p-0">
                     <!-- SideNav slide-out button -->
                     @*<div class="float-left mr-2">
@@ -87,7 +87,7 @@
             </div>
             
             
-            <nav class="navbar navbar-expand-lg hidden-md-down navbar-light white black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0" id="nav-fix-top" style="font-weight:400;">
+            <nav class="navbar navbar-expand-lg hidden-md-down navbar-light grey lighten-5 black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0" id="nav-fix-top" style="font-weight:400;">
 
                 <!-- Navbar brand -->
                 <a class="navbar-brand" href="#">Navbar</a>
