--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <a class="navbar-brand font-bold" href="#">
                         <strong></strong>
                     </a>*@
-                    <div class="float-left border border-left-0 border-top-0 border-bottom-0 border-primary">
+                    <div class="float-left ">
                         <ul class="navbar-nav ">
                             <li class="nav-item ">
                                 <a class="nav-link dark-grey-text font-bold waves-effect waves-light py-1" href="javascript:;">
@@ -46,7 +46,13 @@
                     <div class="float-left ml-1 col-6 p-0 ">
                         <form class="form-inline waves-effect waves-dark hidden-md-down ">
                             <i class="fa fa-search prefix blue-text"></i>
-                            <input class="form-control col-11 pt-1 pb-2 ml-1 dark-grey-text border-primary" type="text" placeholder="Tìm kiếm bài viết..." aria-label="Search">
+                            <input class="form-control col-9 pt-1 pb-2 ml-1 mr-0 dark-grey-text border-primary" type="text" placeholder="Tìm kiếm bài viết..." aria-label="Search">
+                            <button class="btn btn-sm btn-blue m-1">Tìm kiếm</button>
+                            
+                            @*<input type="text" class="form-control" placeholder="Search for...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-secondary" type="button">Go!</button>
+                            </span>*@
                         </form>
                     </div>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4" aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
