--- a/BlogHealth/Views/Admin/AddPost.cshtml
+++ b/BlogHealth/Views/Admin/AddPost.cshtml
@@ -40,10 +40,12 @@
                 },
                 optionLabel: "Chọn danh mục",
             });
-            $('#frmAddPost input[name="Title"]').keyup(function () {
+            $('#frmAddPost input[name="Title"]').bind('keyup change keydown ',function () {
                 $('#frmAddPost input[name="Slug"]').val(bodauTiengViet($(this).val()));
             });
-           
+            //$('#frmAddPost input[name="Title"]').change(function () {
+            //    $('#frmAddPost input[name="Slug"]').val(bodauTiengViet($(this).val()));
+            //});
             //$("#frmAddPost input[name='files']").kendoUpload({
             //    async: {
             //        saveUrl: "save",
@@ -111,7 +113,7 @@
                 <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
                     <div class="card-body">
                         <form id="frmAddPost" method="post" action="@Url.Action("AddPost","Admin")" enctype="multipart/form-data">
-                            <div class="row">
+                            <div class="row justify-content-md-center">
                                 <div class="col-lg-10 ">
                                     <div class="row">
 
@@ -137,8 +139,9 @@
                                         </div>
                                         
                                         <div class="col-md-8 pl-5">
+                                            
                                             <div class="md-form">
-                                                <i class="fa fa-list prefix"></i>
+                                                
                                                <input type="text" name="IDCategory" class="form-control" placeholder="Danh mục">
                                             </div>
                                         </div>
