--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -219,7 +219,8 @@
     <script src="~/Kendo/js/kendo.all.min.js"></script>
     <script src="~/Kendo/js/kendo.all.min.js"></script>
     <script src="~/Kendo/js/jszip.min.js"></script>
-  
+
+    <script src="~/AdminAsset/js/Myscript.js"></script>
     @*<script src="~/ckfinder/ckfinder_v1.js"></script>*@
     <!-- Initializations -->
 <script>
