--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -44,10 +44,10 @@
                         </ul>
                     </div>
                     <div class="float-left ml-1 col-6 p-0 ">
-                        <form class="form-inline waves-effect waves-dark hidden-md-down ">
+                        <form class="form-inline waves-effect waves-dark hidden-md-down blue-text">
                             <i class="fa fa-search prefix blue-text"></i>
-                            <input class="form-control col-9 pt-1 pb-2 ml-1 mr-0 dark-grey-text border-primary" type="text" placeholder="Tìm kiếm bài viết..." aria-label="Search">
-                            <button class="btn btn-sm btn-blue m-1">Tìm kiếm</button>
+                            <input class="form-control col-9 pt-1 pb-2 ml-1 mr-0 blue-text border-primary" type="text" placeholder="Nhập nội dung tìm kiếm" aria-label="Search">
+                            <button class="btn btn-sm btn-blue m-1 py-2">Tìm kiếm</button>
                             
                             @*<input type="text" class="form-control" placeholder="Search for...">
                             <span class="input-group-btn">
