--- a/BlogHealth/Views/Shared/LayoutAdmin.cshtml
+++ b/BlogHealth/Views/Shared/LayoutAdmin.cshtml
@@ -81,7 +81,7 @@
                             <div class="collapsible-body">
                                 <ul>
                                     <li>
-                                        <a href="#" class="waves-effect"> <i class="fa fa-list"></i>Danh sách</a>
+                                        <a href="@Url.Action("Posts","Admin")" class="waves-effect"> <i class="fa fa-list"></i>Danh sách</a>
                                     </li>
                                     <li>
                                         <a href="@Url.Action("AddPost","Admin")" class="waves-effect"><i class="fa fa-pencil"></i>Viết bài</a>
