--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                     <div class="float-left ml-1 col-6 p-0 ">
                         <form class="form-inline waves-effect waves-dark hidden-md-down blue-text">
                             <i class="fa fa-search prefix blue-text"></i>
-                            <input class="form-control col-9 pt-1 pb-2 ml-1 mr-0 blue-text border-primary" type="text" placeholder="Nhập nội dung tìm kiếm" aria-label="Search">
+                            <input class="form-control col-lg-9 col-md-7  pt-1 pb-2 ml-1 mr-0 blue-text border-primary" type="text" placeholder="Nhập nội dung tìm kiếm" aria-label="Search">
                             <button class="btn btn-sm btn-blue m-1 py-2">Tìm kiếm</button>
                             
                             @*<input type="text" class="form-control" placeholder="Search for...">
