layout-center menu

--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -93,10 +93,10 @@
             </div>
             
             
-            <nav class="navbar navbar-expand-lg hidden-md-down navbar-light grey lighten-5 black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0" id="nav-fix-top" style="font-weight:400;">
+            <nav class="navbar navbar-expand-lg hidden-md-down navbar-light grey lighten-5 black-text py-0  px-lg-5 px-xl-5 px-md-5 px-sm-0  " id="nav-fix-top" style="font-weight:400;">
 
                 <!-- Navbar brand -->
-                <a class="navbar-brand" href="#">Navbar</a>
+                @*<a class="navbar-brand" href="#">Navbar</a>*@
 
                 <!-- Collapse button -->
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenuContent" aria-controls="navbarMenuContent"
@@ -105,10 +105,10 @@
                 </button>
 
                 <!-- Collapsible content -->
-                <div class="collapse navbar-collapse" id="navbarMenuContent">
+                <div class="collapse navbar-collapse justify-content-md-center" id="navbarMenuContent">
 
                     <!-- Links -->
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav  justify-content-md-center">
                         <li class="nav-item active ml-1">
                             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                         </li>
