--- a/BlogHealth/Views/Shared/_Layout.cshtml
+++ b/BlogHealth/Views/Shared/_Layout.cshtml
@@ -562,7 +562,7 @@
                     </div>
                 </div>
                 <div class="col-xl-12 mb-2">
-                    <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
+                    <ul class="nav nav-tabs nav-justified py-1 px-0 blue">
                         <li class="nav-item  waves-effect waves-dark m-0">
                             <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelSocial" role="tab">
                                 <h5 class="blue-text section-heading h5 m-0">
@@ -612,7 +612,7 @@
                     </div>
                 </div>
                 <div class="col-xl-12 mb-2">
-                    <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
+                    <ul class="nav nav-tabs nav-justified py-1 px-0 blue">
                         <li class="nav-item  waves-effect waves-dark m-0">
                             <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelSocial" role="tab">
                                 <h5 class="blue-text section-heading h5 m-0">
