--- a/BlogHealth/Views/Home/Index.cshtml
+++ b/BlogHealth/Views/Home/Index.cshtml
@@ -8,10 +8,10 @@
     </style>
 }
 
-    <div class="col-xl-3 hidden-sm-down MainContent" id="">
+    <div class="col-xl-3 hidden-sm-down MainContent pr-0 pl-1" id="">
         @*<h4 class="text-success section-heading h4">Bài viết nổi bật</h4>*@
         <div class="row">
-            <div class="col-xl-12 mb-1 ">
+            <div class="col-xl-12 mb-1 ">   
                 <ul class="nav nav-tabs nav-justified pb-1 pt-0 px-0 blue">
                     <li class="nav-item  waves-effect waves-dark m-0">
                         <a class="nav-link active p-1 white darken-1" data-toggle="tab" href="#panelHot" role="tab">
@@ -291,7 +291,7 @@
         </ul>
         <div class="tab-content px-1">
             <!--Panel 1-->
-            <div class="tab-pane fade in show active" id="panelPosts" role="tabpanel">
+            <div class="tab-pane fade in show active white" id="panelPosts" role="tabpanel">
                 <div class="row">
                     <div class="col-xl-6">
 
